ujDivHozzaadas javascript elkészítése

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1>Virtuális cikkoldal</h1>
     <div id="container"></div>
 
-    <button id="addDiv">Új div hozzáadása</button>
-    <button id="addParagraph" >Új bekezdés hozzáadása</button>
+    <button onclick="ujDivHozzaad()" id="addDiv">Új div hozzáadása</button>
+    <button onclick="ujBekezdesHozzaad()" id="addParagraph" >Új bekezdés hozzáadása</button>
     <button id="styleElements" >Stílus alkalmazása</button>
 
     
+<script src="dom.js"></script>    
 </body>
 </html>
