--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <button onclick="ujDivHozzaad()" id="addDiv">Új div hozzáadása</button>
     <button onclick="ujBekezdesHozzaad()" id="addParagraph" >Új bekezdés hozzáadása</button>
-    <button id="styleElements" >Stílus alkalmazása</button>
+    <button onclick="stilusKeszites()" id="styleElements" >Stílus alkalmazása</button>
 
     
 <script src="dom.js"></script>    
